--- a/assets/stylesheets/styles.css
+++ b/assets/stylesheets/styles.css
@@ -57,6 +57,7 @@ table {
 body {
 	font-family: Poppins;
 	font-size: 16px;
+	font-style: normal;
 }
 
 .container-fluid {
@@ -75,13 +76,17 @@ a {
 	color: inherit;
 }
 
+figure {
+	position: relative;
+}
+
 /******* nav ********/
 
 .nav {
 	flex-wrap: nowrap;
 	color: #000;
 	font-size: 14px;
-	font-style: normal;
+	
 	font-weight: 400;
 	line-height: 21px;
 	letter-spacing: 0em;
@@ -98,7 +103,7 @@ a {
 .name-container {
 	font-family: Poppins;
 	font-size: 2.5rem;
-	font-style: normal;
+	
 	font-weight: 800;
 	line-height: 3em;
 	letter-spacing: 0em;
@@ -110,11 +115,16 @@ a {
 	color: #727274;
 	font-family: Poppins;
 	font-size: 1rem;
-	font-style: normal;
+	
 	font-weight: 400;
 	line-height: 1.8em;
 	letter-spacing: 0em;
 	text-align: left;	
+}
+
+.heading {
+	letter-spacing: 0;
+	text-align: left;
 }
 
 .social-network {
@@ -122,13 +132,10 @@ a {
 }
 .social-network > .heading {
 	color: #525252;
-	font-family: Poppins;
 	font-size: 1rem;
-	font-style: normal;
+	
 	font-weight: 600;
 	line-height: 1.8em;
-	letter-spacing: 0;
-	text-align: left;
 	padding-bottom: 1.4em;
 }
 
@@ -136,7 +143,61 @@ a {
 	display: flex;
 	justify-content: space-between;
 	align-items: center;
-	color: #f5612b;
+	color: #f9855b;
+}
+
+.portfolio-section {
+	padding-top: 1.6em;
+	padding-bottom: 1.6em;
+}
+
+.portfolio-section > .heading {
+	font-size: 1.75rem;
+	
+	font-weight: 800;
+	line-height: 2em;
+}
+
+.portfolio-section figcaption {
+	color: #fff;
+	font-size: 1.6rem;
+	
+	font-weight: 700;
+	line-height: 2.4em;
+	letter-spacing: 0em;
+	text-align: left;	
+	position: absolute;
+	top: 2%;
+	left: 10%;
+}
+
+.built-tools {
+	padding: 1.5em 0;
+}
+
+.built-tools > .tool {
+	background: #423B39;
+	color: #fff;
+	font-weight: 500;
+	font-style: normal;
+	font-family: Poppins;
+	font-size: 0.9rem;
+	line-height: 1.3em;
+	padding: 0.3em;
+	vertical-align: middle;
+	text-align: center;
+}
+
+.see-project-button {
+	font-weight: bolder;
+	font-size: 1rem;
+	text-align: center;
+	padding: 0.5em;
+	width: 100%;
+	background: #f9855b;
+	border: none;
+	color: #fff;
+	line-height: 1.5em;
 }
 
 
